# ia-robot-mazes

./: .gitignore  Makefile  README.md
assets/mazes/: maze03.txt  maze04.txt  maze05.txt  maze07.txt  maze10.txt  maze12.txt  maze13.txt  maze15.txt  maze18.txt  maze20.txt  maze22.txt
docs/: results.md
project 1/: .gitignore  CMakeLists.txt  Makefile
project 1/C++/include/algorithms/: State.h
project 1/C++/src/algorithms/: RobotMazeSolver.cpp  SearchProblemSolver.cpp
project 1/C++/tests/: test.cpp
project 1/Python/: RobotMazeSolver.py  controller.py  example_maze.txt  graphic.py  graphics.py  graphics_consts.py  heuristics.py  loop.py  main.py  maze.py  model.py  state.py  viewer.py
project 1/assets/mazes/: maze01.txt  maze02.txt  maze06.txt  maze08.txt  maze09.txt  maze11.txt  maze14.txt  maze16.txt  maze17.txt  maze19.txt  maze21.txt
project 1/docs/: Robot Mazes Project Quick Guide.md
project 1/include/algorithms/: SearchProblemSolver.h  StateQueue.h
project 1/src/: LongestSuccessiveRepeatedSubstring.py  RobotMazeSolver.py  controller.py  graphics.py  heuristics.py  loop.py  main.cpp  maze.py  model.py  solver.py  state.py  utils.py  viewer.py
project 1/src/algorithms/: RobotMazeSolver.cpp  SearchProblemSolver.cpp  State.cpp  StateQueue.cpp
src/: RobotMazeSolver.py  controller.py  graphics.py  graphics_consts.py  heuristics.py  loop.py  main.py  maze.py  model.py  solver.py  state.py  utils.py  viewer.py
